introduce early stopping and metrics to model

--- a/Sobota_Benach_DL.ipynb
+++ b/Sobota_Benach_DL.ipynb
@@ -12,7 +12,8 @@
     "from keras.layers import LSTM, Dense\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from keras.callbacks import EarlyStopping"
    ]
   },
   {
@@ -569,111 +570,10 @@
    "source": [
     "# Reshape data for LSTM input (samples, time steps, features)\n",
     "X_train_scaled = X_train_scaled.reshape(X_train_scaled.shape[0], window_size, -1)\n",
-    "X_test_scaled = X_test_scaled.reshape(X_test_scaled.shape[0], window_size, -1)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[-1.18409869,  0.81359287,  0.89894815, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [-1.12374756,  0.61050549,  0.8274579 , ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [-1.07144324,  0.45818995,  1.34864483, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        ...,\n",
-       "        [-1.01166688,  0.96590841, -0.86985879, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [-1.01051733,  0.96590841, -1.08894179, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [-1.01626506,  0.81359287, -0.64616352, ...,  0.        ,\n",
-       "          0.        ,  0.        ]],\n",
-       "\n",
-       "       [[-1.12374756,  0.61050549,  0.8274579 , ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [-1.07144324,  0.45818995,  1.34864483, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [-1.06684506,  0.45818995,  0.52304784, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        ...,\n",
-       "        [-1.01051733,  0.96590841, -1.08894179, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [-1.01626506,  0.81359287, -0.64616352, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [-1.01626506,  0.81359287, -1.03128837, ...,  0.        ,\n",
-       "          0.        ,  0.        ]],\n",
-       "\n",
-       "       [[-1.07144324,  0.45818995,  1.34864483, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [-1.06684506,  0.45818995,  0.52304784, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [-1.12144847,  0.66127734,  0.44463919, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        ...,\n",
-       "        [-1.01626506,  0.81359287, -0.64616352, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [-1.01626506,  0.81359287, -1.03128837, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [-1.0679946 ,  0.96590841,  0.9773568 , ...,  0.        ,\n",
-       "          0.        ,  0.        ]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[ 0.60516877,  1.1689958 , -0.34636573, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [ 0.19248196,  1.01668026,  2.91681786, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [ 0.08040128,  1.1689958 ,  0.56917058, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        ...,\n",
-       "        [ 1.1943108 , -1.11573727,  0.05951434, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [ 1.32535897, -1.26805281,  0.26014825, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [ 1.22477375, -1.16650912, -0.18263002, ...,  0.        ,\n",
-       "          0.        ,  0.        ]],\n",
-       "\n",
-       "       [[ 0.19248196,  1.01668026,  2.91681786, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [ 0.08040128,  1.1689958 ,  0.56917058, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [ 0.08959764,  1.1689958 ,  0.74213084, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        ...,\n",
-       "        [ 1.32535897, -1.26805281,  0.26014825, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [ 1.22477375, -1.16650912, -0.18263002, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [ 1.04831853, -0.76033435, -0.21030366, ...,  0.        ,\n",
-       "          0.        ,  0.        ]],\n",
-       "\n",
-       "       [[ 0.08040128,  1.1689958 ,  0.56917058, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [ 0.08959764,  1.1689958 ,  0.74213084, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [ 0.0252231 ,  1.01668026,  0.39621032, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        ...,\n",
-       "        [ 1.22477375, -1.16650912, -0.18263002, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [ 1.04831853, -0.76033435, -0.21030366, ...,  0.        ,\n",
-       "          0.        ,  0.        ],\n",
-       "        [ 0.59999581,  0.25510257, -0.86524652, ...,  0.        ,\n",
-       "          0.        ,  0.        ]]])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train_scaled"
+    "X_test_scaled = X_test_scaled.reshape(X_test_scaled.shape[0], window_size, -1)\n",
+    "\n",
+    "# Split data into train and validation sets\n",
+    "X_train_scaled, X_val_scaled, y_train, y_val = train_test_split(X_train_scaled, y_train, test_size=0.2, shuffle=False)"
    ]
   },
   {
@@ -816,8 +716,15 @@
     "model.add(Dense(units=1))  # Output layer with 1 neuron for temperature prediction\n",
     "model.compile(optimizer='adam', loss='mean_squared_error')\n",
     "\n",
+    "# Define early stopping callback\n",
+    "early_stopping = EarlyStopping(monitor='val_loss', patience=5, verbose=1)\n",
+    "\n",
     "# Train the model\n",
-    "model.fit(X_train_scaled, y_train, epochs=50, batch_size=32)\n",
+    "history = model.fit(X_train_scaled, \n",
+    "                    y_train, epochs=100, \n",
+    "                    batch_size=32, \n",
+    "                    validation_data=(X_val, y_val), \n",
+    "                    callbacks=[early_stopping])\n",
     "\n",
     "# Evaluate the model\n",
     "loss = model.evaluate(X_test, y_test)\n",
