--- a/Sobota_Benach_DL.ipynb
+++ b/Sobota_Benach_DL.ipynb
@@ -896,7 +896,7 @@
    "source": [
     "\n",
     "# Create a callback to save the best model\n",
-    "callback1 = ModelCheckpoint('./models/',save_best_only=True)\n",
+    "model_save = ModelCheckpoint('./models/',save_best_only=True)\n",
     "\n",
     "# Define early stopping callback\n",
     "early_stopping = EarlyStopping(monitor='val_loss', patience=100, verbose=1)\n",
@@ -906,7 +906,7 @@
     "                    y_train, epochs=100, \n",
     "                    batch_size=64, \n",
     "                    validation_data=(X_val_scaled, y_val), \n",
-    "                    callbacks=[early_stopping])\n",
+    "                    callbacks=[early_stopping, model_save])\n",
     "\n",
     "# Evaluate the model\n",
     "metrics = model.evaluate(X_test_scaled, y_test)\n",
