--- a/Sobota_Benach_DL.ipynb
+++ b/Sobota_Benach_DL.ipynb
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -1075,105 +1075,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "1928/1928 [==============================] - 173s 87ms/step - loss: 1.8839 - rmse: 2.2369 - val_loss: 1.7110 - val_rmse: 2.0467\n",
-      "Epoch 2/50\n",
-      "1928/1928 [==============================] - 70s 36ms/step - loss: 1.7786 - rmse: 2.1240 - val_loss: 1.8217 - val_rmse: 2.1661\n",
-      "Epoch 3/50\n",
-      "1928/1928 [==============================] - 76s 39ms/step - loss: 1.7035 - rmse: 2.0425 - val_loss: 1.7237 - val_rmse: 2.0511\n",
-      "Epoch 4/50\n",
-      "1928/1928 [==============================] - 74s 38ms/step - loss: 1.6450 - rmse: 1.9773 - val_loss: 1.7257 - val_rmse: 2.0603\n",
-      "Epoch 5/50\n",
-      "1928/1928 [==============================] - 72s 37ms/step - loss: 1.5697 - rmse: 1.8932 - val_loss: 1.8061 - val_rmse: 2.1440\n",
-      "Epoch 6/50\n",
-      "1928/1928 [==============================] - 72s 37ms/step - loss: 1.4843 - rmse: 1.7975 - val_loss: 1.8023 - val_rmse: 2.1421\n",
-      "Epoch 7/50\n",
-      "1928/1928 [==============================] - 72s 37ms/step - loss: 1.3863 - rmse: 1.6892 - val_loss: 1.8693 - val_rmse: 2.2129\n",
-      "Epoch 8/50\n",
-      "1928/1928 [==============================] - 72s 37ms/step - loss: 1.3047 - rmse: 1.5989 - val_loss: 1.8999 - val_rmse: 2.2499\n",
-      "Epoch 9/50\n",
-      "1928/1928 [==============================] - 73s 38ms/step - loss: 1.2340 - rmse: 1.5201 - val_loss: 1.9174 - val_rmse: 2.2711\n",
-      "Epoch 10/50\n",
-      "1928/1928 [==============================] - 73s 38ms/step - loss: 1.1805 - rmse: 1.4596 - val_loss: 2.0317 - val_rmse: 2.3912\n",
-      "Epoch 11/50\n",
-      "1928/1928 [==============================] - 73s 38ms/step - loss: 1.1422 - rmse: 1.4162 - val_loss: 1.9569 - val_rmse: 2.3112\n",
-      "Epoch 12/50\n",
-      "1928/1928 [==============================] - 72s 37ms/step - loss: 1.0973 - rmse: 1.3656 - val_loss: 2.0201 - val_rmse: 2.3814\n",
-      "Epoch 13/50\n",
-      "1928/1928 [==============================] - 72s 37ms/step - loss: 1.0746 - rmse: 1.3391 - val_loss: 1.9817 - val_rmse: 2.3423\n",
-      "Epoch 14/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 1.0409 - rmse: 1.3022 - val_loss: 2.0413 - val_rmse: 2.4086\n",
-      "Epoch 15/50\n",
-      "1928/1928 [==============================] - 73s 38ms/step - loss: 1.0256 - rmse: 1.2843 - val_loss: 2.0134 - val_rmse: 2.3741\n",
-      "Epoch 16/50\n",
-      "1928/1928 [==============================] - 72s 38ms/step - loss: 1.0028 - rmse: 1.2591 - val_loss: 2.0324 - val_rmse: 2.3947\n",
-      "Epoch 17/50\n",
-      "1928/1928 [==============================] - 72s 37ms/step - loss: 0.9826 - rmse: 1.2361 - val_loss: 2.0689 - val_rmse: 2.4318\n",
-      "Epoch 18/50\n",
-      "1928/1928 [==============================] - 73s 38ms/step - loss: 0.9725 - rmse: 1.2237 - val_loss: 2.0853 - val_rmse: 2.4528\n",
-      "Epoch 19/50\n",
-      "1928/1928 [==============================] - 74s 39ms/step - loss: 0.9494 - rmse: 1.1985 - val_loss: 2.1232 - val_rmse: 2.4959\n",
-      "Epoch 20/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.9385 - rmse: 1.1862 - val_loss: 2.0957 - val_rmse: 2.4683\n",
-      "Epoch 21/50\n",
-      "1928/1928 [==============================] - 72s 37ms/step - loss: 0.9291 - rmse: 1.1747 - val_loss: 2.1102 - val_rmse: 2.4822\n",
-      "Epoch 22/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.9182 - rmse: 1.1628 - val_loss: 2.1030 - val_rmse: 2.4716\n",
-      "Epoch 23/50\n",
-      "1928/1928 [==============================] - 72s 37ms/step - loss: 0.9040 - rmse: 1.1465 - val_loss: 2.1483 - val_rmse: 2.5185\n",
-      "Epoch 24/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.8948 - rmse: 1.1369 - val_loss: 2.1202 - val_rmse: 2.4957\n",
-      "Epoch 25/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.8814 - rmse: 1.1212 - val_loss: 2.1416 - val_rmse: 2.5117\n",
-      "Epoch 26/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.8689 - rmse: 1.1078 - val_loss: 2.1243 - val_rmse: 2.4965\n",
-      "Epoch 27/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.8638 - rmse: 1.1013 - val_loss: 2.0928 - val_rmse: 2.4571\n",
-      "Epoch 28/50\n",
-      "1928/1928 [==============================] - 72s 37ms/step - loss: 0.8546 - rmse: 1.0915 - val_loss: 2.1125 - val_rmse: 2.4867\n",
-      "Epoch 29/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.8471 - rmse: 1.0829 - val_loss: 2.1525 - val_rmse: 2.5279\n",
-      "Epoch 30/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.8415 - rmse: 1.0766 - val_loss: 2.1285 - val_rmse: 2.5013\n",
-      "Epoch 31/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.8321 - rmse: 1.0655 - val_loss: 2.1166 - val_rmse: 2.4918\n",
-      "Epoch 32/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.8272 - rmse: 1.0606 - val_loss: 2.1036 - val_rmse: 2.4797\n",
-      "Epoch 33/50\n",
-      "1928/1928 [==============================] - 72s 37ms/step - loss: 0.8184 - rmse: 1.0507 - val_loss: 2.1097 - val_rmse: 2.4788\n",
-      "Epoch 34/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.8089 - rmse: 1.0403 - val_loss: 2.1167 - val_rmse: 2.4852\n",
-      "Epoch 35/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.8029 - rmse: 1.0334 - val_loss: 2.1011 - val_rmse: 2.4717\n",
-      "Epoch 36/50\n",
-      "1928/1928 [==============================] - 73s 38ms/step - loss: 0.7958 - rmse: 1.0260 - val_loss: 2.0992 - val_rmse: 2.4717\n",
-      "Epoch 37/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.7975 - rmse: 1.0271 - val_loss: 2.1181 - val_rmse: 2.4852\n",
-      "Epoch 38/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.7838 - rmse: 1.0125 - val_loss: 2.1068 - val_rmse: 2.4721\n",
-      "Epoch 39/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.7849 - rmse: 1.0133 - val_loss: 2.1005 - val_rmse: 2.4681\n",
-      "Epoch 40/50\n",
-      "1928/1928 [==============================] - 72s 37ms/step - loss: 0.7776 - rmse: 1.0055 - val_loss: 2.0870 - val_rmse: 2.4554\n",
-      "Epoch 41/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.7738 - rmse: 1.0006 - val_loss: 2.1010 - val_rmse: 2.4693\n",
-      "Epoch 42/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.7731 - rmse: 1.0005 - val_loss: 2.1123 - val_rmse: 2.4867\n",
-      "Epoch 43/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.7655 - rmse: 0.9916 - val_loss: 2.1386 - val_rmse: 2.5100\n",
-      "Epoch 44/50\n",
-      "1928/1928 [==============================] - 72s 37ms/step - loss: 0.7788 - rmse: 1.0069 - val_loss: 2.1579 - val_rmse: 2.5337\n",
-      "Epoch 45/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.7529 - rmse: 0.9783 - val_loss: 2.1535 - val_rmse: 2.5334\n",
-      "Epoch 46/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.7582 - rmse: 0.9836 - val_loss: 2.1014 - val_rmse: 2.4725\n",
-      "Epoch 47/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.7483 - rmse: 0.9728 - val_loss: 2.1019 - val_rmse: 2.4729\n",
-      "Epoch 48/50\n",
-      "1928/1928 [==============================] - 72s 37ms/step - loss: 0.7432 - rmse: 0.9678 - val_loss: 2.1196 - val_rmse: 2.4934\n",
-      "Epoch 49/50\n",
-      "1928/1928 [==============================] - 71s 37ms/step - loss: 0.7429 - rmse: 0.9670 - val_loss: 2.1252 - val_rmse: 2.4966\n",
-      "Epoch 50/50\n",
-      "1928/1928 [==============================] - 73s 38ms/step - loss: 0.7369 - rmse: 0.9602 - val_loss: 2.1217 - val_rmse: 2.4958\n"
+      "1533/1623 [===========================>..] - ETA: 3s - loss: 1.8525 - rmse: 2.2030"
      ]
     }
    ],
@@ -1186,7 +1088,7 @@
     "\n",
     "# Train the best model with early stopping using validation data\n",
     "history = best_model.fit(X_train, y_train, epochs=epochs,\n",
-    "              validation_data=(X_val, y_val))"
+    "              validation_data=(X_val, y_val), batch_size=38)"
    ]
   },
   {
